[package]
name = "kernel_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
log = "0.4"
# tokio = { version = "0.2", features = ["full"] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
riscv = "0.7.0"